[package]
name = "liquidity-guard"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
anyhow = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
env_logger = "0.11"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
solana-client = "2.1"
solana-sdk = "2.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
