[package]
name = "liquidity-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
anyhow = "1.0"
env_logger = "0.11"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }

# Solana crates pinned together
solana-client = "2.3"
solana-sdk = "2.3"
solana-account-decoder = "2.3"
